--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "nuxt-boilerplate",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
-  "author": "",
+  "author": "Takatoshi Wada",
   "private": true,
   "scripts": {
     "dev": "nuxt",
